styles/info.css
h1,
h2,
h3,
header,
nav {
  font-family: geosanslight-nmsregular, 'Open Sans', Helvetica, Verdana, Arial, sans-serif;
}
h4 {
  font-family: geosanslight-nmsregular, 'Open Sans', Helvetica, Verdana, Arial, sans-serif;
  margin: 5px 0;
}
body,
.info-card,
.search-area input {
  font-family: 'Open Sans', Helvetica, Verdana, Arial, sans-serif;
}
body {
  margin: 0;
  overflow: hidden;
}
.center {
  display: block;
  margin: 0 auto;
  text-align: center;
}
header {
  background-color: #01385b;
  max-height: 70px;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
}
header .title {
  line-height: 50px;
  font-size: 22px;
  padding: 10px;
  margin: 0 auto;
  color: #fff;
}
header .button-container {
  position: absolute;
  height: 70px;
  right: 0;
  top: 0;
  transition: right 0.3s ease-out;
}
header button {
  padding: 0;
  transition: background-color 0.2s ease-out;
  border: none;
  background-color: transparent;
  background-image: none;
  width: 70px;
  height: 70px;
  -webkit-tap-highlight-color: transparent;
  margin-left: -4px;
  cursor: pointer;
}
header button:hover {
  background-color: rgba(255, 255, 255, .2);
}
header button:focus {
  outline: 0;
}
header button img {
  width: 30px;
  height: 30px;
  margin: 20px;
}
nav {
  position: absolute;
  top: 70px;
  width: 100vw;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
  text-align: center;
  background-color: #01385b;
  z-index: 1;
}
nav ul {
  max-height: 0;
  transition: max-height 0.5s;
  list-style: none;
  padding: 0;
  margin: 0;
  overflow-y: hidden;
}
nav.open ul {
  max-height: 100vh;
}
nav li {
  cursor: pointer;
  transition: background-color 0.2s;
}
nav li:hover {
  background-color: rgba(255, 255, 255, .2);
}
nav li span {
  display: inline-block;
  padding: 10px 7px;
  color: #fff !important;
}
nav .github {
  height: 1.5em;
  width: 1.5em;
}
main {
  position: relative;
  overflow-x: hidden;
  overflow-y: scroll;
  height: calc(100vh - 70px);
}
.page-container {
  margin: 0 auto;
  max-width: 53em;
  position: relative;
  right: 0;
  transition: right 0.5s;
}
.page-container.cat {
  right: calc(100vw - (50vw - (53em / 2)));
}
.page-container.search {
  right: calc((100vw - (50vw - (53em / 2))) * -1);
}
.page-container.elements {
  right: calc((100vw - (50vw - (53em / 2))) * 2);
}
.page-container.links {
  right: calc((100vw - (50vw - (53em / 2))) * 3);
}
.page-container.recent {
  right: calc((100vw - (50vw - (53em / 2))) * 4);
}
.page-container > div {
  margin: 0 5px;
  position: absolute;
  width: calc(100% - 10px);
  max-width: 53em;
}
.page-cat {
  left: calc(100vw - (50vw - (100% / 2)));
}
.page-search {
  left: calc((100vw - (50vw - (100% / 2))) * -1);
}
.page-elements {
  left: calc((100vw - (50vw - (100% / 2))) * 2);
}
.page-links {
  left: calc((100vw - (50vw - (100% / 2))) * 3);
}
.page-recent {
  left: calc((100vw - (50vw - (100% / 2))) * 4);
}
.info-list .info-card,
.cat-list .category-card,
.elements-list .element-card,
.link-list .link-card,
.search-area {
  margin-bottom: 10px;
}
.info-card,
.category-card,
.element-card,
.link-card,
.search-area {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  background: #fff;
  border-radius: 2px;
  width: 100%;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
}
.header,
.category-card {
  position: relative;
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
  overflow: hidden;
  cursor: pointer;
}
.header .header-bg {
  background-color: #01385b;
  width: 100%;
  pointer-events: none;
  height: 60px;
  transition: height 0.5s, background-color 0.5s;
}
.spoiler .header .header-bg {
  background-color: #e22 !important;
}
.expanded .header .header-bg {
  height: 100px;
}
.card-title {
  margin: 16px;
  font-size: 24px;
  font-weight: bold;
  color: #fff;
}
.dark-text .card-title {
  color: #000;
}
.dark-text.spoiler .card-title {
  color: #fff;
}
.header .card-title {
  position: absolute;
  bottom: 0;
  transition: color 0.5s, margin 0.5s, left 0.5s;
}
.expanded .card-title {
  margin: 24px 16px;
}
.info-card .categories {
  padding: 5px 16px;
  position: absolute;
  top: -32px;
  opacity: 0;
  transition: top 0.5s, opacity 0.5s;
}
.info-card.expanded .categories {
  opacity: 1;
  top: 0;
}
.info-card .categories li {
  color: #fff;
  text-decoration: underline;
  cursor: pointer;
}
.info-card.dark-text .categories li {
  color: #000;
}
.info-card.dark-text.spoiler .categories li {
  color: #fff;
}
.info-card .categories li:hover {
  text-decoration: none;
}
.element-symbol {
  display: inline-block;
  position: absolute;
  width: 32px;
  height: 32px;
  text-align: center;
  margin: 12px;
  top: 0;
  right: 0;
  color: #fff;
  font-size: 24px;
  border: 2px solid #fff;
  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.25) 100%);
  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
}
.external {
  display: inline-block;
  text-align: center;
}
.header .external {
  position: absolute;
  width: 32px;
  height: 32px;
  margin: 14px;
  top: 0;
  right: 0;
}
.card-content .external {
  height: 1.5em;
  width: 1.5em;
  cursor: pointer;
}
.external ~ span {
  position: absolute;
  cursor: pointer;
}
.card-content {
  max-height: 0;
  overflow-y: hidden;
  transition: max-height 0.5s, padding 0.5s;
}
.expanded .card-content {
  padding: 16px 0;
  /* Just has to be a big value, but not too big */
  max-height: 1000px;
}
.card-content div:not(.separator) {
  padding: 0 16px;
}
.card-content iframe {
  max-height: 300px;
  width: 100%;
  border: 0;
}
.separator {
  border-bottom: 2px solid #aaa;
}
.sources ul,
.related ul,
.categories ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.sources ul li,
.related ul li,
.categories ul li {
  display: inline-block;
  padding-right: 4px;
}
.search-area {
  padding: 16px;
  display: flex;
  background-color: #01385b;
}
.search-area input {
  margin: 5px;
  padding: 5px;
  font-size: 1.1em;
  background-color: #fff;
  color: #000;
  border: 0;
  border-radius: 2px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
}
.search-area input[type=search] {
  flex: 1;
  box-shadow: none;
  transition: box-shadow 0.5s, opacity 0.5s;
}
.hoverable {
  position: relative;
}
.hoverable-container {
  background-color: rgba(0, 0, 0, 0.6);
  font-size: 0.75em;
  position: absolute;
  bottom: 2em;
  padding: 5px !important;
  border-radius: 2px;
  opacity: 0;
  color: #fff !important;
  visibility: hidden;
  transition: opacity 0.5s;
}
.hoverable:hover .hoverable-container {
  visibility: visible;
  opacity: 1;
}
.hoverable-container p {
  margin: 0;
}
.related li,
.sources li {
  color: #000 !important;
  text-decoration: underline;
  cursor: pointer;
}
.related li:hover,
.sources li:hover {
  text-decoration: none;
}
.added {
  background-color: #c9ffca;
  color: #1c5a0b;
}
.edited {
  background-color: #fcffc9;
  color: #90521e;
}
.removed {
  background-color: #ffcac9;
  color: #8e1310;
}
.sort-type {
  display: inline-block;
  float: right;
}
.sort-type.alpha svg:not(.sort-alpha) {
  display: none;
}
.sort-type.category svg:not(.sort-category) {
  display: none;
}
.sort-type.random svg:not(.sort-random) {
  display: none;
}
.sort-type svg {
  fill: #000;
  position: absolute;
  right: 0;
  height: 24px;
  width: 24px;
}
@media all and (min-width: 400px) {
  header .title {
    font-size: 30px;
  }
}
@media all and (min-width: 500px) {
  header .title {
    text-align: center;
  }
}
@media all and (min-width: 600px) {
  header .title {
    font-size: 40px;
  }
}
@media all and (min-width: 700px) {
  header .title {
    font-size: 50px;
  }
}
@media all and (min-width: 920px) {
  header {
    box-shadow: 0;
  }
  header .menu {
    display: none;
  }
  nav {
    position: absolute;
    left: 0;
    top: 70px;
    width: 100%;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
    text-align: center;
    background-color: #01385b;
    z-index: 1;
  }
  nav.floating {
    position: fixed;
    top: 0;
  }
  nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    max-height: none;
  }
  nav li {
    display: inline-block;
    /* Workaround a small inline-block bug/feature */
    margin-left: -4px;
    cursor: pointer;
    transition: background-color 0.2s;
  }
  nav li span {
    display: inline-block;
    font-size: 1em;
    padding: 19px 10px;
  }
  nav .github-link {
    position: absolute;
    top: -70px;
    right: 0;
  }
  nav .github-link span {
    width: 30px;
    height: 30px;
    margin: 20px;
    padding: 0;
  }
  nav .github {
    width: 30px;
    height: 30px;
  }
  main {
    top: 56px;
    overflow-x: hidden;
    overflow-y: scroll;
    height: calc(100vh - 126px);
  }
  .card-column {
    display: inline-block;
    width: calc(50% - 10px);
    padding: 0 5px;
    vertical-align: top;
  }
}
@media all and (min-width: 1300px) {
  .page-container {
    max-width: 72em;
  }
  .page-container.cat {
    right: calc(100vw - (50vw - (72em / 2)));
  }
  .page-container.search {
    right: calc((100vw - (50vw - (72em / 2))) * -1);
  }
  .page-container.elements {
    right: calc((100vw - (50vw - (72em / 2))) * 2);
  }
  .page-container.links {
    right: calc((100vw - (50vw - (72em / 2))) * 3);
  }
  .page-container.recent {
    right: calc((100vw - (50vw - (72em / 2))) * 4);
  }
  .page-container > div {
    max-width: 72em;
  }
  .card-column {
    width: calc(33% - 10px);
  }
}

